# Seasonendingroster.com

./: .gitignore  CNAME  README.md  brackets.html  franchises.html  h2h.html  history.html  index.html  owners_quiz.html  playoffs.html  pyproject.toml
.github/workflows/: refresh.yml
assets/: site-chrome.css  site-chrome.js  styles.css
data/proccessed/: franchise_career_stats.csv
data/processed/: matchups.csv  metrics.json  playoff_metrics.json  standings_by_season.csv
icons/: icon.md
images/: image.md
reports/: all_time.html  champions.html  index.html  records.html
reports/csv/: all_time.csv  champions.csv  runnerups.csv
scripts/: DATA.md  TOKEN.md  UPDATE_SECRET.md  build_site.py  discover_league_keys.py  generate_season_pages.py  metrics.py  oauth2.json.example  playoff_metrics.py  pull_raw.py  refresh_token.py  transform.py  yahoo_auth_cli.py
seasons/: 2004.html  2005.html  2006.html  2007.html  2008.html  2009.html  2010.html  2011.html  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  2025.html  index.html
site_data/: all_time.json  champions.json  records.json  rosters_2025.json  runnerups.json
